# Color-Transformer-with-Cuda

./: CMakeLists.txt  README.md
src/: ColorConvertor.cpp  ColorConvertor.h  CudaHandler.cu  CudaHandler.cuh  MediaHandler.cpp  MediaHandler.h  main.cpp
